--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -122,7 +122,8 @@ button.newssearchbtn, input.newssearchfield[type=text] {
 }
 
 #aboutus h3{
-    font-size: 2.13rem;
+    /* font-size: 2.13rem; */
+    font-size: 24px;
     line-height: 2.25rem;
     padding: 22px 0px 4px 0px;
     margin-top: 0;
@@ -253,7 +254,7 @@ button.newssearchbtn, input.newssearchfield[type=text] {
 
 #foot h3{
     line-height: 2.1em;
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 600;
     text-transform: uppercase;
     color: black;
@@ -389,12 +390,12 @@ section:after {
     color: black;
     font-family: "Stag Sans Book";
     margin-bottom: 10px;
-    /* text-decoration: underline; */
 }
 
 h3.product{
-    font-size: 2.5em;
+    font-size: 24px;
     margin-left: 5%;
+    color: black;
 }
 
 
